k8s/trials/ing.mira.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mira-alsigo-net
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: mira3.alsigo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mira
            port:
              number: 443
